--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -1,8 +1,8 @@
-// @mixin retina {
-//   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-//     @content;
-//   }
-// }
+@mixin retina {
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    @content;
+  }
+}
 
 @mixin hover {
   @media (hover: hover) {
