change main-prod img & resize

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -39,7 +39,7 @@
     background-color: $base-color-dark;
 
     @include hover-focus {
-      box-shadow: 0px 0px 0px 1px $base-color-white inset;
+      box-shadow: 0 0 0 1px $base-color-white inset;
       background-color: transparent;
       color: $text-color-white;
     }
