--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -30,6 +30,7 @@
 .form textarea {
   padding: 25px 15px;
   min-height: 155px;
+
   grid-column: 1/-1;
 
   overflow: hidden;
@@ -58,8 +59,9 @@
 
   @include vp-767 {
     margin-bottom: 20px;
+
     font-size: 30px;
-    line-height: 140.62%;
+    line-height: 1.4;
   }
 }
 
@@ -76,9 +78,10 @@
   }
 
   @include vp-767 {
-    font-size: 14px;
-    line-height: 134.4%;
     margin-bottom: 40px;
+
+    font-size: 14px;
+    line-height: 1.34;
   }
 }
 
@@ -100,6 +103,7 @@
 
   @include vp-767 {
     margin-bottom: 30px;
+
     gap: 20px;
   }
 }
@@ -113,7 +117,8 @@
 
   @include vp-767 {
     max-width: 270px;
-    line-height: 19px;
+
+    line-height: 1.19;
   }
 }
 
@@ -122,6 +127,7 @@
   grid-template-columns: 15px auto;
   gap: 11px;
   box-sizing: border-box;
+
   cursor: pointer;
 
   @include hover-focus {
@@ -163,7 +169,7 @@
 .form__checkbox-name {
   font-family: $ff-pt-mono;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
   color: $text-color-white;
   opacity: 0.8;
 }
@@ -172,17 +178,19 @@
 
 .form--modal legend {
   font-size: 30px;
-  line-height: 140.62%;
+  line-height: 1.4;
 }
 
 .form--modal p {
   margin-bottom: 40px;
+
   font-size: 16px;
   line-height: 22px;
 }
 
 .form--modal .form__input {
   margin-bottom: 25px;
+
   display: flex;
   flex-direction: column;
   gap: 20px;
