--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -11,6 +11,7 @@ $text-color-light: #f2f5f6;
 $text-color-dark: #041827;
 $text-color-alt: #00b2ff;
 $text-color-white: #ffffff;
+$text-color-white-opacity: rgba(#ffffff, 0.7);
 // Pallete
 $black-pearl: #041427;
 $black-pearl-opacity: rgba($black-pearl, 0.15);
