--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -41,21 +41,21 @@
 
 .about__decor span {
   margin-bottom: 10px;
-  font-weight: 700;
+
   font-size: 156px;
   line-height: 220px;
+  font-weight: 700;
   color: transparent;
+
   writing-mode: vertical-rl;
+  background-clip: text;
+  user-select: none;
 
   background-image: url("../../img/about-bg.webp");
 
   @include retina {
     background-image: url("../../img/about-bg2x.webp");
   }
-
-  background-clip: text;
-
-  user-select: none;
 }
 
 .about__info {
@@ -75,7 +75,7 @@
 
   @include vp-767 {
     font-size: 28px;
-    line-height: 140.62%;
+    line-height: 1.4;
   }
 }
 
@@ -87,7 +87,7 @@
 
   @include vp-767 {
     font-size: 14px;
-    line-height: 134.4%;
+    line-height: 1.34;
   }
 }
 
@@ -99,21 +99,19 @@
 
 .about__button {
   margin-top: 30px;
-  width: 180px;
   padding: 13px;
+  width: 180px;
 
   display: flex;
   justify-content: center;
-
-  font-size: 14px;
-  line-height: 16px;
 
   @include vp-1023 {
     margin-top: 10px;
   }
 
   @include vp-767 {
-    padding: 8px 15px 10px;
+    padding: 8px;
+    padding-bottom: 10px;
     width: 160px;
   }
 }
