--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -28,6 +28,7 @@
 
 .features__item {
   padding: 40px 45px 35px;
+  min-height: 300px;
 
   list-style: none;
 
@@ -36,7 +37,8 @@
     inset 0 0 0 1px $whisper;
   box-sizing: border-box;
   outline: none;
-  transition: 200ms;
+
+  transition: background-color 0.2s;
 
   @include hover-focus {
     color: $text-color-light;
@@ -70,24 +72,24 @@
   margin-bottom: 15px;
 
   font-size: 24px;
-  line-height: 34px;
+  line-height: 1.4;
   font-weight: 400;
   color: $text-color-alt;
 
   @include vp-767 {
     font-size: 20px;
-    line-height: 140.62%;
+    line-height: 1.4;
   }
 }
 
 .features__item p {
   margin: 0;
 
-  line-height: 135%;
+  line-height: 1.35;
   font-family: $ff-pt-mono;
 
   @include vp-767 {
     font-size: 14px;
-    line-height: 135%;
+    line-height: 1.35;
   }
 }
