--- a/source/sass/utils/accordion.scss
+++ b/source/sass/utils/accordion.scss
@@ -3,13 +3,13 @@
   padding: 0;
 
   font-size: 15px;
-  line-height: 16px;
+  line-height: 1.07;
   font-weight: 400;
   font-family: $ff-roboto-condensed;
   color: $text-color-white;
   text-transform: uppercase;
   text-align: left;
-  letter-spacing: 0.05em;
+  letter-spacing: 0.8px;
 
   background-color: transparent;
   border: none;
@@ -79,9 +79,9 @@
 
 .accordion__item {
   margin-bottom: 10px;
-  box-sizing: border-box;
 
   list-style: none;
+  box-sizing: border-box;
 }
 
 .accordion__link {
