--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,5 +1,5 @@
 .header {
-  padding: 30px 0 35px;
+  padding: 25px 0 35px;
   width: 100%;
   min-height: 120px;
 
@@ -36,7 +36,7 @@
 }
 
 .header__info {
-  width: 40%;
+  width: 38%;
 
   display: flex;
   align-items: center;
@@ -107,6 +107,8 @@
 }
 
 .header__logo {
+  margin-right: 5px;
+
   @include vp-767 {
     width: auto;
   }
