--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -1,8 +1,8 @@
 .logo {
-  width: 215px;
+  width: 202px;
 
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: space-between;
 }
 
@@ -15,9 +15,8 @@
 
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 5px;
+  gap: 10px;
+  box-sizing: border-box;
 
   &--header {
     @include vp-767 {
