tablet + mobile PP, testing, validating

--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -2,11 +2,11 @@
   padding: 60px 0 95px;
 
   @include vp-1023 {
-    padding: 40px 0 80px;
+    padding: 35px 0 81px;
   }
 
   @include vp-767 {
-    padding: 25px 0 80px;
+    padding: 22px 0 82px;
   }
 }
 
@@ -16,7 +16,7 @@
   column-gap: 100px;
 
   @include vp-1023 {
-    column-gap: 20px;
+    column-gap: 25px;
   }
 
   @include vp-767 {
@@ -57,6 +57,12 @@
   @include retina {
     background-image: url("../../img/about-bg2x.webp");
   }
+
+  @include vp-1023 {
+    margin-bottom: 0;
+
+    transform: translate(-15px, -10px);
+  }
 }
 
 .about__info {
@@ -75,6 +81,8 @@
   font-weight: 400;
 
   @include vp-767 {
+    margin-bottom: 3px;
+
     font-size: 28px;
     line-height: 1.4;
   }
@@ -84,7 +92,11 @@
   margin: 10px 0;
 
   font-family: $ff-pt-mono;
-  line-height: 22px;
+  line-height: 1.37;
+
+  @include vp-1023 {
+    line-height: 1.33;
+  }
 
   @include vp-767 {
     font-size: 14px;
@@ -111,6 +123,7 @@
   }
 
   @include vp-767 {
+    margin-top: 0;
     padding: 8px;
     padding-bottom: 10px;
     width: 160px;
