--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -5,8 +5,8 @@
   background-color: $base-color-dark;
   background-image: $intro-gradient, url("../../img/main-prod.webp");
   background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 48% 54%;
+  background-size: 125%;
+  background-position: 48% 48%;
 
   @include retina {
     background-image: $intro-gradient, url("../../img/main-prod2x.webp");
@@ -16,14 +16,16 @@
     padding: 180px 0 205px;
     min-height: 640px;
 
-    background-position: 19% 48%;
+    background-size: 175%;
+    background-position: 18% 48%;
   }
 
   @include vp-767 {
-    padding: 155px 0 190px;
+    padding: 149px 0 190px;
     min-height: 560px;
 
-    background-position: 25% 39%;
+    background-size: 375%;
+    background-position: 25% 55%;
   }
 }
 
@@ -56,15 +58,19 @@
   color: $text-color-light;
 
   @include vp-1023 {
-    margin-bottom: 20px;
+    margin-bottom: 0;
 
     font-size: 64px;
     line-height: 75px;
+    letter-spacing: 4.6px;
   }
 
   @include vp-767 {
+    margin-bottom: 10px;
+
     font-size: 36px;
     line-height: 1.17;
+    letter-spacing: 2.5px;
   }
 }
 
@@ -78,10 +84,12 @@
   color: $text-color-light;
 
   @include vp-1023 {
-    margin-bottom: 50px;
+    margin-bottom: 57px;
   }
 
   @include vp-767 {
+    margin-bottom: 43px;
+
     font-size: 14px;
     line-height: 1.55;
 
@@ -101,7 +109,7 @@
 
   @include vp-767 {
     margin-left: 0;
-    padding: 10px;
+    padding: 12px;
     width: 270px;
 
     font-size: 14px;
