--- a/source/sass/utils/accordion.scss
+++ b/source/sass/utils/accordion.scss
@@ -16,7 +16,7 @@
 
   @include vp-767 {
     margin-bottom: 0;
-    padding: 20px 25px;
+    padding: 21px 25px;
     width: 100%;
   }
 }
@@ -53,6 +53,18 @@
 
   &--contacts {
     width: 28.5%;
+
+    @include vp-1023 {
+      width: 100%;
+    }
+  }
+}
+
+.accordion__element--contacts .accordion__item {
+  @include vp-767 {
+    &:first-child {
+      margin-bottom: 20px;
+    }
   }
 }
 
@@ -86,16 +98,35 @@
 
   list-style: none;
   box-sizing: border-box;
+
+  @include vp-1023 {
+    margin-bottom: 9px;
+  }
+
+  @include vp-767 {
+    margin-bottom: 10px;
+  }
 }
 
 .accordion__link {
   font-size: 16px;
-  line-height: 135%;
+  line-height: 1.35;
   font-family: $ff-pt-mono;
   color: $text-color-white;
   opacity: 0.7;
 
+  @include vp-767 {
+    font-size: 14px;
+    line-height: 1.35;
+  }
+
   @include hover-focus {
     opacity: 0.8;
+  }
+}
+
+.accordion__element.is-active .accordion__content {
+  @include vp-767 {
+    min-height: 150px;
   }
 }
