--- a/source/sass/blocks/connection.scss
+++ b/source/sass/blocks/connection.scss
@@ -5,13 +5,13 @@
   scroll-margin-top: 100px;
 
   @include vp-1023 {
-    padding: 50px 0 125px;
+    padding: 45px 0 125px;
 
     background: $base-color-primary;
   }
 
   @include vp-767 {
-    padding: 50px 0 90px;
+    padding: 46px 0 87px;
   }
 }
 
@@ -23,6 +23,8 @@
   column-gap: 3%;
 
   @include vp-1023 {
+    padding: 0 50px;
+
     display: flex;
     flex-direction: column;
   }
@@ -32,6 +34,8 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
+
+  transform: translate(-10px, 10px);
 
   @include vp-1023 {
     display: none;
