--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -26,6 +26,53 @@
   }
 }
 
+.features__item svg {
+  margin-bottom: 20px;
+
+  fill: $base-color-primary;
+
+  @include vp-1023 {
+    margin-bottom: 10px;
+  }
+
+  @include vp-767 {
+    width: 30px;
+    height: 30px;
+  }
+}
+
+.features__item h3 {
+  margin: 0;
+  margin-bottom: 15px;
+
+  font-size: 24px;
+  line-height: 1.4;
+  font-weight: 400;
+  color: $text-color-alt;
+
+  @include vp-1023 {
+    margin-bottom: 5px;
+  }
+
+  @include vp-767 {
+    margin-bottom: 10px;
+
+    font-size: 20px;
+  }
+}
+
+.features__item p {
+  margin: 0;
+
+  line-height: 1.35;
+  font-family: $ff-pt-mono;
+
+  @include vp-767 {
+    font-size: 14px;
+    line-height: 1.35;
+  }
+}
+
 .features__item {
   padding: 40px 45px 35px;
   min-height: 300px;
@@ -39,6 +86,11 @@
   outline: none;
 
   transition: background-color 0.2s;
+
+  &--confidence br,
+  &--personality br {
+    display: none;
+  }
 
   @include hover-focus {
     color: $text-color-light;
@@ -56,40 +108,29 @@
     }
   }
 
+  @include vp-1023 {
+    min-height: 360px;
+  }
+
   @include vp-767 {
     padding: 30px 30px 35px;
-  }
-}
+    min-height: 340px;
 
-.features__item svg {
-  margin-bottom: 20px;
+    &--confidence,
+    &--personality {
+      min-height: 325px;
 
-  fill: $base-color-primary;
-}
+      & svg {
+        margin-bottom: 15px;
+      }
 
-.features__item h3 {
-  margin: 0;
-  margin-bottom: 15px;
+      & h3 {
+        margin-bottom: 15px;
+      }
 
-  font-size: 24px;
-  line-height: 1.4;
-  font-weight: 400;
-  color: $text-color-alt;
-
-  @include vp-767 {
-    font-size: 20px;
-    line-height: 1.4;
-  }
-}
-
-.features__item p {
-  margin: 0;
-
-  line-height: 1.35;
-  font-family: $ff-pt-mono;
-
-  @include vp-767 {
-    font-size: 14px;
-    line-height: 1.35;
+      & br {
+        display: block;
+      }
+    }
   }
 }
