--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -36,10 +36,11 @@
   overflow: hidden;
 
   @include vp-1023 {
-    padding: 32px 15px;
+    padding: 30px 15px;
   }
 
   @include vp-767 {
+    padding: 20px 15px;
     min-height: 180px;
   }
 }
@@ -54,11 +55,11 @@
   color: $text-color-white;
 
   @include vp-1023 {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
   }
 
   @include vp-767 {
-    margin-bottom: 20px;
+    margin-bottom: 7px;
 
     font-size: 30px;
     line-height: 1.4;
@@ -74,11 +75,11 @@
   color: $text-color-white;
 
   @include vp-1023 {
-    margin-bottom: 25px;
+    margin-bottom: 26px;
   }
 
   @include vp-767 {
-    margin-bottom: 40px;
+    margin-bottom: 33px;
 
     font-size: 14px;
     line-height: 1.34;
@@ -99,6 +100,10 @@
 
 .form__submit {
   gap: 20px 50px;
+
+  @include vp-1023 {
+    gap: 20px 30px;
+  }
 }
 
 .form__input {
@@ -106,8 +111,12 @@
 
   gap: 20px 30px;
 
+  @include vp-1023 {
+    margin-bottom: 33px;
+  }
+
   @include vp-767 {
-    margin-bottom: 30px;
+    margin-bottom: 27px;
 
     gap: 20px;
   }
@@ -115,16 +124,18 @@
 
 .form__button {
   padding: 15px;
-  width: 265px;
+  width: 100%;
+  max-width: 265px;
 
   letter-spacing: 2px;
 
   @include vp-1023 {
+    padding: 17px 15px 13px;
     max-width: 265px;
   }
 
   @include vp-767 {
-    max-width: 270px;
+    max-width: 100%;
 
     line-height: 1.19;
   }
