--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -20,7 +20,7 @@
   }
 
   @include vp-767 {
-    padding: 15px 0 20px;
+    padding: 12px 0 20px;
     min-height: 70px;
   }
 }
@@ -47,6 +47,7 @@
   @include vp-1023 {
     margin-right: 20px;
     width: auto;
+    align-self: flex-start;
   }
 
   @include vp-767 {
@@ -108,6 +109,10 @@
 
 .header__logo {
   margin-right: 5px;
+
+  @include vp-1023 {
+    margin-right: 0;
+  }
 
   @include vp-767 {
     width: auto;
