--- a/source/sass/blocks/socials.scss
+++ b/source/sass/blocks/socials.scss
@@ -10,7 +10,14 @@
 
   @include vp-1023 {
     margin-left: 0;
+    margin-right: -5px;
+
+    align-self: flex-start;
     gap: 15px;
+  }
+
+  @include vp-767 {
+    align-self: center;
   }
 }
 
