--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -20,6 +20,7 @@
     background-position: 18% 48%;
   }
 
+  // транзитная точка для bg
   @media (max-width: 1290px) {
     background-size: cover;
   }
