after review fixes

--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -29,63 +29,6 @@
     display: none;
   }
 
-  &__wrapper {
-    position: relative;
-
-    display: flex;
-    flex-shrink: 0;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    min-height: 100%;
-    padding: 60px 40px;
-  }
-
-  &__overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-
-    width: 100%;
-    height: 100%;
-
-    cursor: pointer;
-  }
-
-  &__content {
-    position: relative;
-
-    width: 500px;
-    padding: 40px;
-
-    border-radius: 3px;
-    background-color: $base-color-primary;
-
-    @include vp-767 {
-      width: 100%;
-      padding: 20px;
-    }
-  }
-
-  &__close-btn {
-    position: absolute;
-    top: 15px;
-    right: 15px;
-    z-index: 1;
-
-    width: 40px;
-    height: 40px;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-    background-color: $base-color-primary;
-    border: none;
-    cursor: pointer;
-  }
-
   &--responsive {
     .modal__content {
       width: 100%;
@@ -117,4 +60,61 @@
 
     pointer-events: auto;
   }
+}
+
+.modal__wrapper {
+  position: relative;
+
+  display: flex;
+  flex-shrink: 0;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  min-height: 100%;
+  padding: 60px 40px;
+}
+
+.modal__overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  cursor: pointer;
+}
+
+.modal__content {
+  position: relative;
+
+  width: 500px;
+  padding: 40px;
+
+  border-radius: 3px;
+  background-color: $base-color-primary;
+
+  @include vp-767 {
+    width: 100%;
+    padding: 20px;
+  }
+}
+
+.modal__close-btn {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  z-index: 1;
+
+  width: 40px;
+  height: 40px;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  background-color: $base-color-primary;
+  border: none;
+  cursor: pointer;
 }
