self test fixes

--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -71,7 +71,9 @@
   align-items: center;
   width: 100%;
   min-height: 100%;
-  padding: 60px 40px;
+  // padding: 60px 40px;
+  padding: 145px 40px;
+  transform: translateX(-8px);
 }
 
 .modal__overlay {
@@ -98,6 +100,19 @@
     width: 100%;
     padding: 20px;
   }
+}
+
+.modal__content legend {
+  margin-bottom: 2px;
+}
+
+.modal__content p {
+  margin-bottom: 35px;
+}
+
+.modal__button {
+  max-width: 100%;
+  width: 100%;
 }
 
 .modal__close-btn {
