--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -33,7 +33,6 @@
 
 .header__container {
   display: flex;
-  align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
   row-gap: 20px;
@@ -47,7 +46,6 @@
 
   display: flex;
   align-items: center;
-  justify-content: space-between;
   flex-wrap: wrap;
   gap: 20px;
 
@@ -73,6 +71,10 @@
   font-size: 16px;
   line-height: 1.12;
   color: $text-color-light;
+
+  &:not(:last-child) {
+    margin-right: auto;
+  }
 
   @include hover-focus {
     color: $text-color-white;
@@ -104,9 +106,11 @@
 }
 
 .header__button {
+  margin-top: 6px;
   margin-right: 60px;
   padding: 10px;
   width: 160px;
+  height: fit-content;
 
   border: 1px solid $text-color-light;
 
