--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -5,7 +5,7 @@
   background-color: $base-color-dark;
   background-image: $intro-gradient, url("../img/main-prod.webp");
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: cover;
   background-position: center;
 
   @include retina {
